# tetrisAI

./: .gitignore  BOT_ABSTRACTION.md  CLAUDE.md  Dockerfile  LICENSE  NES_TETRIS_AUDIT.md  NEURAL_NETWORK_PLAN.md  README.md  TRAINING_INFRASTRUCTURE.md  board_detect.py  cleanup_checkpoints.sh  config-feedforward  lines_save.pkl  old_save_lines.pkl  old_save_score.pkl  piece_movements.py  pyproject.toml  random_run.py  requirements.txt  run.py  save.pkl  save_lines.pkl  save_score.pkl  train.py  train_with_recording.py  vision_debug.py  visualize.py  watcher.py
.github/workflows/: main.yml
bot/: __init__.py  base.py  defined_weights.py  detect.py  evaluate.py  evaluation_pool.py  evolution.py  random_bot.py  weighted_bot.py
bot/random_bot/: __init__.py  random_bot.py
bot/weighted_bot/: __init__.py  defined_weights.py  evaluate.py  evaluation_pool.py  evolution.py  weighted_bot.py
docs/: NES_TETRIS_AUDIT.md  NEURAL_NETWORK_PLAN.md  improving_training.md
emulator/: __init__.py  capture.py  capture_templates.py  disable_nestopia_sound.scpt  enable_nestopia_sound.scpt  enter_nestopia_cheat.scpt  fceux.py  fceux_bridge.lua  keyboard.py  manage.py  resize_nestopia.scpt
fceux/: compare_log.py  tetris_log.jsonl  tetris_logger.lua
previous_trainings/: 2022_01_19-save_lines.pkl  2022_01_22_save_lines.pkl  2022_01_22_save_score.pkl
tests/bot/: test_detect.py
tests/tetris/: test_board.py  test_pieces.py  test_state.py
tests/vision/: test_detect.py
tetris/: __init__.py  board.py  constants.py  game.py  pieces.py  recorder.py  state.py
validation/: __init__.py  metrics.py
vision/: __init__.py  detect.py
visualization/: __init__.py  board_renderer.py  live_viewer.py  replay_viewer.py
