[tool.poetry]
name = "tetrisai"
version = "0.1.0"
description = ""
authors = ["Chris Vaughn <chris@cvaughn.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2"
opencv-python = "^4"
progressbar = "^2.5"

pyobjc-framework-Quartz = { version = "^10", optional = true }
mss = { version = "^9", optional = true }
applescript = { version = "^2021", optional = true }


[tool.poetry.extras]
macOS = ["pyobjc-framework-Quartz", "mss", "applescript"]

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
