[project]
name = "tetrisai"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "numpy>=2",
    "opencv-python>=4",
    "progressbar>=2.5",
]

[project.optional-dependencies]
macOS = [
    "pyobjc-framework-Quartz>=10",
    "mss>=9",
    "applescript>=2021",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
